Ticketing-app/infra/k8s/manual/auth-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - name: auth
      port: 3000
      targetPort: 3000
